--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:ems="10"
-        android:hint="이메일"
+        android:hint="아이디"
         android:inputType="textPersonName" />
 
     <EditText
@@ -32,16 +32,10 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/sign_up_btn"
+        android:id="@+id/log_in_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="회원가입" />
-
-    <Button
-        android:id="@+id/gotologin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:text="로그인" />
+
 </LinearLayout>
