--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -14,15 +14,6 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/user_pw_check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="10"
-        android:hint="비밀번호 확인"
-        android:inputType="textPersonName" />
-
-    <EditText
         android:id="@+id/user_pw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +30,7 @@
         android:text="로그인" />
 
     <Button
-        android:id="@+id/sign_up_btn"
+        android:id="@+id/gotosignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
