--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -39,7 +39,7 @@
         android:text="로그인" />
 
     <Button
-        android:id="@+id/sign_up_btn"
+        android:id="@+id/gotosignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
