--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그아웃" />
+
+    <Button
+        android:id="@+id/gotoSNS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SNS" />
 </LinearLayout>
