--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -27,13 +27,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="로그인" />
+        android:text="로그인 하기" />
 
     <Button
         android:id="@+id/gotosignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="회원가입" />
+        android:text="회원가입 화면으로 이동" />
 
 </LinearLayout>
