--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -36,12 +36,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="로그인" />
+        android:text="로그인 화면으로 이동" />
 
     <Button
         android:id="@+id/gotosignup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="회원가입" />
+        android:text="회원가입 하기" />
 </LinearLayout>
