--- a/app/src/main/res/layout/fragment_camera2_basic.xml
+++ b/app/src/main/res/layout/fragment_camera2_basic.xml
@@ -24,27 +24,28 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/control"
         android:layout_width="match_parent"
         android:layout_height="112dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@color/control_background">
+        android:layout_alignParentBottom="true"
+        android:background="@color/control_background"
+        android:gravity="center">
 
         <Button
             android:id="@+id/picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_weight="1"
             android:text="picture" />
 
         <Button
             android:id="@+id/change"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_weight="1"
             android:text="Change" />
-    </FrameLayout>
+    </LinearLayout>
 
 </RelativeLayout>
