--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,49 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
 
-    <com.github.mikephil.charting.charts.RadarChart
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:id="@+id/radarChart">
-    </com.github.mikephil.charting.charts.RadarChart>
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/logOutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="로그아웃" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/gotoSNS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SNS" />
+
+            <com.github.mikephil.charting.charts.RadarChart
+                android:id="@+id/radarChart"
+                android:layout_width="match_parent"
+                android:layout_height="500dp">
+
+            </com.github.mikephil.charting.charts.RadarChart>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/lineChart"
+                android:layout_width="match_parent"
+                android:layout_height="500dp">
+
+            </com.github.mikephil.charting.charts.LineChart>
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/barChart"
+                android:layout_width="match_parent"
+                android:layout_height="500dp">
+
+            </com.github.mikephil.charting.charts.BarChart>
+
+            <Button
+                android:id="@+id/gotoSNS"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SNS" />
+
+            <Button
+                android:id="@+id/logOutBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="로그아웃" />
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
