--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -34,47 +34,38 @@
                 android:id="@+id/profileImageView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/profile" />
         </androidx.cardview.widget.CardView>
 
         <EditText
-            android:id="@+id/nameeditText"
+            android:id="@+id/nickNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="이름"
+            android:hint="닉네임"
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/phoneeditText"
+            android:id="@+id/weightEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="전화번호"
+            android:hint="몸무게"
             android:inputType="phone" />
 
         <EditText
-            android:id="@+id/birtheditText"
+            android:id="@+id/heightEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="생년월일"
+            android:hint="키"
             android:inputType="date" />
 
-        <EditText
-            android:id="@+id/addresseditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:hint="주소"
-            android:inputType="textPostalAddress" />
-
         <Button
-            android:id="@+id/checkbtn"
+            android:id="@+id/checkBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
