--- a/app/src/main/res/layout/activity_member_init.xml
+++ b/app/src/main/res/layout/activity_member_init.xml
@@ -69,6 +69,7 @@
                     android:id="@+id/profileImageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
                     app:srcCompat="@drawable/profile" />
             </androidx.cardview.widget.CardView>
 
